test/expected/explain_as9i.out
explain int a[static 9]
              ^
15: syntax error: "static": ']' expected
